--- a/code/Analyses/BA - Analysis and Visualization - Rest.Rmd
+++ b/code/Analyses/BA - Analysis and Visualization - Rest.Rmd
@@ -28,29 +28,43 @@ OECD <- regions$country[regions$OECD == TRUE]
 ## load data
 
 ```{r}
-# general data sets
-data_general <- read_csv("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/processed_data/Working Files/data_general.csv")
 
-wellfare_ind <- read_csv("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/processed_data/Working Files/wellfare_ind.csv")
+scaled <- FALSE
+
+if (scaled == TRUE) {
+  s <- "_scaled"
+} else {
+  s <- ""
+}
+
+# general data sets
+data_general <- read_csv(paste("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/processed_data/Working Files/data_general", s, ".csv", sep = ""))
+
+wellfare_ind <- read_csv(paste("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/processed_data/Working Files/wellfare_ind", s, ".csv", sep = ""))
+
+wellfare_ind$cluster <- as.factor(wellfare_ind$cluster)
+
+avg_wellfare_ind <- read_csv(paste("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/processed_data/Working Files/avg_wellfare_ind", s, ".csv", sep = ""))
+
 
 # means and variance
-means_country <- read_csv("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/processed_data/Working Files/means_country.csv")
+means_country <- read_csv(paste("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/processed_data/Working Files/means_country", s, ".csv", sep = ""))
 
-means_year <- read_csv("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/processed_data/Working Files/means_year.csv")
+means_year <- read_csv(paste("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/processed_data/Working Files/means_year", s, ".csv", sep = ""))
 
-variance_country <- read_csv("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/processed_data/Working Files/variance_country.csv")
+variance_country <- read_csv(paste("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/processed_data/Working Files/variance_country", s, ".csv", sep = ""))
 
-variance_year <- read_csv("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/processed_data/Working Files/variance_year.csv")
+variance_year <- read_csv(paste("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/processed_data/Working Files/variance_year", s, ".csv", sep = ""))
 
 
 # wide data sets
-data_crs_wider_eff <- read_csv("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/processed_data/Working Files/data_crs_wider_eff.csv")
+data_crs_wider_eff <- read_csv(paste("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/processed_data/Working Files/data_crs_wider_eff", s, ".csv", sep = ""))
 
-data_crs_wider_rank <- read_csv("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/processed_data/Working Files/data_crs_wider_rank.csv")
+data_crs_wider_rank <- read_csv(paste("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/processed_data/Working Files/data_crs_wider_rank", s, ".csv", sep = ""))
 
-data_vrs_wider_eff <- read_csv("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/processed_data/Working Files/data_vrs_wider_eff.csv")
+data_vrs_wider_eff <- read_csv(paste("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/processed_data/Working Files/data_vrs_wider_eff", s, ".csv", sep = ""))
 
-data_vrs_wider_rank <- read_csv("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/processed_data/Working Files/data_vrs_wider_rank.csv")
+data_vrs_wider_rank <- read_csv(paste("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/processed_data/Working Files/data_vrs_wider_rank", s, ".csv", sep = ""))
 ```
 
 ## Problems
@@ -62,7 +76,6 @@ at first sight
 -   target mean years in school sometimes ridiculously high
 
 -   Same goes for life expectancy
-
 
 ## Make very long datasets
 
@@ -90,6 +103,49 @@ identical(data_general$rank_crs, data_general$rank_vrs)
 
 > Ranks are not identical.
 
+### Over time
+
+#### On average
+
+```{r}
+means_year %>%
+  select(year, efficiency_crs, efficiency_vrs) %>%
+  pivot_longer(cols = c("efficiency_crs","efficiency_vrs"), names_to = "method") %>%
+  ggplot(aes(year, value))+
+  geom_line(aes(color = method))
+ 
+```
+
+#### Per country
+
+```{r}
+data_general %>%
+  # filter(efficiencies <= quantile(data_crs$efficiencies)[2]) %>%
+  filter(country %in% c("Germany", "United States", "France", "Thailand", "Ghana", "South Africa")) %>%
+  ggplot(aes(year, efficiency_crs))+
+  geom_point(aes(
+    color=country
+    )
+  )+
+  geom_line(aes(
+    color=country
+    )
+  )
+```
+
+### Correlation
+
+```{r}
+cor(data_general %>% select(efficiency_crs, efficiency_vrs))
+```
+
+### 100% efficient
+
+```{r}
+sum(data_general$efficiency_crs == 1) # = 63 / 53
+sum(data_general$efficiency_vrs == 1) # = 193 / 127
+```
+
 ## Most efficient, Least efficient, big changes
 
 ### CRS
@@ -105,13 +161,18 @@ means_country$country[means_country$efficiency_crs == min(means_country$efficien
 Individual DMUs
 
 ```{r}
+crs_100 <- unique(data_general$country[data_general$efficiency_crs == 1])
+crs_100
+```
+
+```{r}
 head(data_general[order(data_general$rank_crs),],70)
-tail(data_general[order(data_general$rank_crs),],10)
+tail(data_general[order(data_general$rank_crs),],20)
 ```
 
 ```{r}
 unique(head(data_general[order(data_general$rank_crs),],70)$country)
-unique(tail(data_general[order(data_general$rank_crs),],10)$country)
+unique(tail(data_general[order(data_general$rank_crs),],20)$country)
 ```
 
 ### VRS
@@ -127,8 +188,166 @@ means_country$country[means_country$efficiency_vrs == min(means_country$efficien
 Individual DMUs
 
 ```{r}
+vrs_100 <- unique(data_general$country[data_general$efficiency_vrs == 1])
+# write_csv(as.data.frame(unique(data_general$country[data_general$efficiency_vrs == 1])), "VRS_100_percent_countries.csv")
+vrs_100
+
 head(data_general[order(data_general$rank_vrs),],70)
-tail(data_general[order(data_general$rank_vrs),],10)
+tail(data_general[order(data_general$rank_vrs),],20)
+
+unique(tail(data_general[order(data_general$rank_vrs),],20)$country)
+```
+
+### Difference
+
+```{r}
+crs_vrs_10_diff <- setdiff(vrs_100, crs_100)
+crs_vrs_10_diff
+```
+
+> CRS efficient countries often developing countries, VRS developed...why?
+
+```{r}
+crsvrs_means_comp <- t(means_country %>%
+  filter(country %in% crs_100) %>%
+  select(-country, -efficiency_crs, -efficiency_vrs) %>%
+  summarise_all(mean))
+
+crsvrs_means_comp <- cbind(crsvrs_means_comp, t(means_country %>%
+  filter(country %in% vrs_100) %>%
+  select(-country, -efficiency_crs, -efficiency_vrs) %>%
+  summarise_all(mean)))
+
+crsvrs_means_comp <- cbind(crsvrs_means_comp, t(means_country %>%
+  filter(country %in% crs_vrs_10_diff) %>%
+  select(-country, -efficiency_crs, -efficiency_vrs) %>%
+  summarise_all(mean)))
+
+crsvrs_means_comp <- as.data.frame(crsvrs_means_comp)
+colnames(crsvrs_means_comp) <- c("crs", "vrs", "crs_vrs_diff")
+
+crsvrs_means_comp$diff <- (crsvrs_means_comp$vrs / crsvrs_means_comp$crs) * 100
+crsvrs_means_comp$diff_2 <- (crsvrs_means_comp$crs_vrs_diff / crsvrs_means_comp$crs) * 100
+
+crsvrs_means_comp
+```
+
+## Correlation between efficiency and input factors
+
+CO2
+
+```{r}
+cor(data_general[c("CO2", "efficiency_crs")]) # = -24 / -28
+cor(data_general[c("CO2", "efficiency_vrs")]) # = -25 / -28
+```
+
+Slight negative correlation (-0.4). The more CO2 emissions per person, the worse the
+
+Foreign Direct Investment
+
+```{r}
+cor(data_general[c("foreign_investment", "efficiency_crs")]) # = -48 / -48
+cor(data_general[c("foreign_investment", "efficiency_vrs")]) # = -38 / -40
+```
+
+No correlation between FDI and the resulting efficiencies
+
+Material footprint
+
+```{r}
+cor(data_general[c("material_footprint", "efficiency_crs")]) # = -27 / -28
+cor(data_general[c("material_footprint", "efficiency_vrs")]) # = -19 / -22
+```
+
+Small correlation (-0.3)
+
+```{r}
+cor(data_general[c("government_debt", "efficiency_crs")]) # = -43 / -41
+cor(data_general[c("government_debt", "efficiency_vrs")]) # = -27 / -25
+```
+
+> Foreign investment highest input on efficiency
+>
+> Order:
+>
+> 1.  foreign investment
+> 2.  government debt
+> 3.  material footprint
+> 4.  CO2
+
+![](images/paste-3DFE937F.png)
+
+Varianz durch Mittelwert
+
+```{r}
+c(var(data_general$CO2),var(data_general$material_footprint)
+,var(data_general$foreign_investment)
+,var(data_general$government_debt))/c(mean(data_general$CO2),
+                                      mean(data_general$material_footprint)
+,mean(data_general$foreign_investment)
+,mean(data_general$government_debt))
+```
+
+> foreign investment highest relationship between variance and mean, supports the high (negative) correlation between efficiency and foreign investment
+>
+> Order:
+>
+> 1.  foreign investment
+> 2.  government debt
+> 3.  material footprint
+> 4.  CO2
+>
+> Scaled (without recalculation of FDI)
+>
+> 1.  government debt
+> 2.  material footprint
+> 3.  CO2
+> 4.  foreign investment
+
+## Performance of country-year combinations with high inputs
+
+```{r}
+CO2_upperQuantile <- subset(data_general, CO2 > as.numeric(quantile(data_general$CO2)[4]))
+CO2_lowerQuantile <- subset(data_general, CO2 <= as.numeric(quantile(data_general$CO2)[2]))
+
+mean(CO2_upperQuantile$efficiency_crs)
+mean(CO2_lowerQuantile$efficiency_crs)
+
+mean(CO2_upperQuantile$efficiency_vrs)
+mean(CO2_lowerQuantile$efficiency_vrs)
+```
+
+```{r}
+MF_upperQuantile <- subset(data_general, material_footprint > as.numeric(quantile(data_general$material_footprint)[4]))
+MF_lowerQuantile <- subset(data_general, material_footprint <= as.numeric(quantile(data_general$material_footprint)[2]))
+
+mean(MF_upperQuantile$efficiency_crs)
+mean(MF_lowerQuantile$efficiency_crs)
+
+mean(MF_upperQuantile$efficiency_vrs)
+mean(MF_lowerQuantile$efficiency_vrs)
+```
+
+```{r}
+FDI_upperQuantile <- subset(data_general, foreign_investment > as.numeric(quantile(data_general$foreign_investment)[4]))
+FDI_lowerQuantile <- subset(data_general, foreign_investment <= as.numeric(quantile(data_general$foreign_investment)[2]))
+
+mean(FDI_upperQuantile$efficiency_crs)
+mean(FDI_lowerQuantile$efficiency_crs)
+
+mean(FDI_upperQuantile$efficiency_vrs)
+mean(FDI_lowerQuantile$efficiency_vrs)
+```
+
+```{r}
+DEBTS_upperQuantile <- subset(data_general, government_debt > as.numeric(quantile(data_general$government_debt)[4]))
+DEBTS_lowerQuantile <- subset(data_general, government_debt <= as.numeric(quantile(data_general$government_debt)[2]))
+
+mean(DEBTS_upperQuantile$efficiency_crs)
+mean(DEBTS_lowerQuantile$efficiency_crs)
+
+mean(DEBTS_upperQuantile$efficiency_vrs)
+mean(DEBTS_lowerQuantile$efficiency_vrs)
 ```
 
 ## Deep-dive into some countries
@@ -138,7 +357,7 @@ Very efficient, very in-efficient, big change in efficiency over time
 Countries to consider (CRS):
 
 | 100% efficiency in some years |                           | Lowest efficiency in some years |                 | Big change in efficiency |
-|-------------------------------|---------------------------|---------------------------------|-----------------|--------------------------|
+|---------------|---------------|---------------|---------------|---------------|
 | Albania                       | 1996-1998                 | Malta                           | 2006-2009, 2011 |                          |
 | Armenia                       | 2006-2008                 | Cyprus                          | 10,12,12,14,15  |                          |
 | Belarus                       | 1998-2001                 |                                 |                 |                          |
@@ -203,106 +422,6 @@ deepdive("Moldova", "i")
 deepdive("Moldova", "o")
 ```
 
-## Correlation between efficiency and input factors
-
-CO2
-
-```{r}
-cor(data_general[c("CO2", "efficiency_crs")]) # = -24
-cor(data_general[c("CO2", "efficiency_vrs")]) # = -25
-```
-
-Slight negative correlation (-0.4). The more CO2 emissions per person, the worse the
-
-Foreign Direct Investment
-
-```{r}
-cor(data_general[c("foreign_investment", "efficiency_crs")]) # = -48
-cor(data_general[c("foreign_investment", "efficiency_vrs")]) # = -38
-```
-
-No correlation between FDI and the resulting efficiencies
-
-Material footprint
-
-```{r}
-cor(data_general[c("material_footprint", "efficiency_crs")]) # = -27
-cor(data_general[c("material_footprint", "efficiency_vrs")]) # = -19
-```
-
-Small correlation (-0.3)
-
-```{r}
-cor(data_general[c("government_debt", "efficiency_crs")]) # = -43
-cor(data_general[c("government_debt", "efficiency_vrs")]) # = -27
-```
-
-> Foreign investment highest input on efficiency
->
-> Order:
->
-> 1.  foreign investment
-> 2.  government debt
-> 3.  material footprint
-> 4.  CO2
-
-![](images/paste-3DFE937F.png)
-
-Varianz durch Mittelwert
-
-```{r}
-c(var(data_general$CO2),var(data_general$material_footprint)
-,var(data_general$foreign_investment)
-,var(data_general$government_debt))/c(mean(data_general$CO2),
-                                      mean(data_general$material_footprint)
-,mean(data_general$foreign_investment)
-,mean(data_general$government_debt))
-```
-
-> foreign investment highest relationship between variance and mean, supports the high (negative) correlation between efficiency and foreign investment
->
-> Order:
->
-> 1.  foreign investment
-> 2.  government debt
-> 3.  material footprint
-> 4.  CO2
-
-
-## Performance of country-year combinations with high inputs
-
-```{r}
-CO2_upperQuantile <- subset(data_crs, CO2 > as.numeric(quantile(data_crs$CO2)[4]))
-CO2_lowerQuantile <- subset(data_crs, CO2 <= as.numeric(quantile(data_crs$CO2)[2]))
-
-mean(CO2_upperQuantile$efficiencies)
-mean(CO2_lowerQuantile$efficiencies)
-```
-
-```{r}
-MF_upperQuantile <- subset(data_crs, material_footprint > as.numeric(quantile(data_crs$material_footprint)[4]))
-MF_lowerQuantile <- subset(data_crs, material_footprint <= as.numeric(quantile(data_crs$material_footprint)[2]))
-
-mean(MF_upperQuantile$efficiencies)
-mean(MF_lowerQuantile$efficiencies)
-```
-
-```{r}
-FDI_upperQuantile <- subset(data_crs, foreign_investment > as.numeric(quantile(data_crs$foreign_investment)[4]))
-FDI_lowerQuantile <- subset(data_crs, foreign_investment <= as.numeric(quantile(data_crs$foreign_investment)[2]))
-
-mean(FDI_upperQuantile$efficiencies)
-mean(FDI_lowerQuantile$efficiencies)
-```
-
-```{r}
-DEBTS_upperQuantile <- subset(data_crs, government_debt > as.numeric(quantile(data_crs$government_debt)[4]))
-DEBTS_lowerQuantile <- subset(data_crs, government_debt <= as.numeric(quantile(data_crs$government_debt)[2]))
-
-mean(DEBTS_upperQuantile$efficiencies)
-mean(DEBTS_lowerQuantile$efficiencies)
-```
-
 ## Correlation with BIP/HDI/HPI
 
 ### **GDP (income/gdp per person)**
@@ -329,11 +448,12 @@ Visualization, color-coded by previously clusters, continents
 
 ```{r}
 # Color-coded by cluster
-wellfare_ind %>%
-  ggplot(aes(efficiency_crs, hdi))+
+vrs_vs_hdi_cluster <- wellfare_ind %>%
+  ggplot(aes(efficiency_vrs, hdi))+
   geom_point(aes(
     color = cluster
-  ))
+  ))+
+  theme(legend.position="bottom")
 ```
 
 The clusters seem to very well represent the different development classes based on the HDI
@@ -351,12 +471,16 @@ wellfare_ind %>%
 
 ```{r}
 # Color-coded by continent
-wellfare_ind %>%
-  ggplot(aes(efficiency_crs, hdi))+
+vrs_vs_hdi_continent <- wellfare_ind %>%
+  ggplot(aes(efficiency_vrs, hdi))+
   geom_point(aes(
     color = continent
   ))+
-  geom_smooth()
+  theme(legend.position="bottom")
+```
+
+```{r}
+grid.arrange(vrs_vs_hdi_cluster, vrs_vs_hdi_continent, ncol = 1)
 ```
 
 #### Average values
@@ -368,7 +492,7 @@ avg_wellfare_ind %>%
 ```
 
 ```{r}
-avg_hdi_comp %>% 
+avg_wellfare_ind %>% 
   ggplot(aes(efficiency_crs, hdi)) +
   geom_point(aes(color = continent))
 ```
@@ -441,7 +565,7 @@ Development of efficiency over time compares to first year
 change_eff <- data_crs_wider_eff %>%
   filter(!is.na(`1990`))
 
-change_eff[4:ncol(change_eff)] <- change_eff[4:ncol(change_eff)] / change_eff[,4]
+change_eff[4:ncol(change_eff)] <- change_eff[,4:ncol(change_eff)] / as.vector(change_eff[,4])
 
 change_eff <- pivot_longer(change_eff, cols = colnames(change_eff)[4:ncol(change_eff)], names_to = "year")
 
@@ -465,23 +589,7 @@ change_eff %>%
 
 ![](images/paste-6AB40972.png)
 
-## years vs efficiency
-
-```{r}
-data_crs %>%
-  # filter(efficiencies <= quantile(data_crs$efficiencies)[2]) %>%
-  filter(country %in% c("Germany", "United States", "France", "Thailand", "Ghana", "South Africa")) %>%
-  ggplot(aes(year, efficiencies))+
-  geom_point(aes(
-    color=country
-    )
-  )+
-  geom_line(aes(
-    color=country
-    )
-  )
-
-```
+## 
 
 ```{r}
 deepdive("Thailand", "i")
@@ -496,11 +604,11 @@ deepdive("Germany", "o")
 ## Efficiencies per continent (all years)
 
 ```{r}
-data_crs %>%
+data_general %>%
   # filter(continent == "Africa") %>%
   # filter(year %in% c(1990:1999)) %>%
 
-  ggplot(aes(continent, efficiencies))+
+  ggplot(aes(continent, efficiency_crs))+
   geom_boxplot()+
   geom_jitter(width = 0.1,
               alpha = 0.5,
@@ -511,11 +619,11 @@ data_crs %>%
 ```
 
 ```{r}
-data_crs %>%
+data_general %>%
   # filter(continent == "Africa") %>%
   filter(year %in% c(1990:1999)) %>%
 
-  ggplot(aes(continent, efficiencies))+
+  ggplot(aes(continent, efficiency_crs))+
   geom_boxplot()+
   geom_jitter(width = 0.1,
               alpha = 0.5,
@@ -526,11 +634,11 @@ data_crs %>%
 ```
 
 ```{r}
-data_crs %>%
+data_general %>%
   # filter(continent == "Africa") %>%
   filter(year %in% c(2000:2009)) %>%
 
-  ggplot(aes(continent, efficiencies))+
+  ggplot(aes(continent, efficiency_crs))+
   geom_boxplot()+
   geom_jitter(width = 0.1,
               alpha = 0.5,
@@ -542,11 +650,11 @@ data_crs %>%
 
 ```{r}
 
-data_crs %>%
+data_general %>%
   # filter(continent == "Africa") %>%
   filter(year %in% c(2010:2019)) %>%
 
-  ggplot(aes(continent, efficiencies))+
+  ggplot(aes(continent, efficiency_crs))+
   geom_boxplot()+
   geom_jitter(width = 0.1,
               alpha = 0.5,
